# OSU-Capstone-2026

./: .gitignore  CMakeLists.txt  README.md  alphaDemonstration.cpp  env.sh  main.cpp  simulation_state.h  test_filter_perception.cpp
.claude/: settings.local.json
build_persistence/: test_auto_save  test_persistence
data_visualization/: CMakeLists.txt  DataVisualizer.cpp  DataVisualizer.hpp  ImGuiVisualizer.cpp  ImGuiVisualizer.hpp  LiveVisualizer.cpp  LiveVisualizer.hpp  main_imgui_visualizer.cpp  main_live_imgui.cpp  main_live_visualization.cpp  main_visualizer.cpp
decision_center/: CMakeLists.txt  biology.cpp  biology.hpp  biology_constants.hpp  brain.cpp  brain.hpp  entity.cpp  entity.hpp  mutate.cpp  mutate.hpp
decision_center/tests/: test_softmax.cpp
imgui_dashboard/: CMakeLists.txt
include/: db_connector.h
saves/: autosave_final_tick_58.txt  autosave_final_tick_99.txt  autosave_tick_100.txt
source/: Simulation.cpp  Simulation.hpp  resource_node.cpp
source/entity/decision_center/: biology.cpp  biology.hpp  biology_constants.hpp  brain.cpp  brain.hpp  entity.cpp  entity.hpp
source/entity/perception_movement/: perception.cpp
source/environment/: Environment.cpp  Environment.h  resource_node.h
source/simulation/: Simulation.cpp  Simulation.hpp
src/: db_connector.cpp  save_manager.cpp
test/: test_filter_perception.cpp
